# Lexibrary

./: .editorconfig  .env.example  .gitignore  .lexignore  .rerender_run.py  .rerender_tmp.sh  AGENTS.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  CLI_ANALYSIS.md  CLI_ANALYSIS_INDEX.md  CLI_COMPLEXITY_MATRIX.txt  CLI_QUICK_REFERENCE.md  CURATOR_REPORT_FINDINGS.md  CURATOR_RESEARCH_INDEX.md  CURATOR_RESEARCH_SUMMARY.md  README.md  aindex-lifecycle-plan.md  architecture-analysis.md  command_comparison_table.txt  config-driven-baml-plan.md  convention-implementation-analysis.md  conventions_dualmode_detail.txt  coverage-baseline.txt  curator-agent.md  curator-order-of-operations.md  curator-phase-2-deprecation.md  decompose-lexictl-cli-analysis.md  design-lifecycle-plan.md  findings_summary.txt  harness-opportunities-status.md  harness-opportunities.md  harness-update-plan.md  iwh-lifecycle-plan.md  lexi-context-plan.md  lexi_validate_output.txt  lexibrary-overview.md  max-token-fix.md  missing_wikilinks.txt  oai-harness-engineering-analysis.md  (+13 more)
.lexibrary/: TOPOLOGY.md  config.yaml
baml_src/: archivist_design_file.baml  archivist_start_here.baml  clients.baml  curator_budget_trimmer.baml  curator_comment_auditing.baml  curator_comment_integration.baml  curator_consistency_checker.baml  curator_deprecation.baml  curator_reconcile_design_file.baml  curator_staleness_resolver.baml  generators.baml  summarize_directory.baml  summarize_file.baml  summarize_files_batch.baml  types.baml
blueprints/: BLUEPRINT_INSTRUCTIONS.md  HANDOFF.md  START_HERE.md  baml_src.md
docs/: README.md  ci-integration.md  cli-reference.md  concepts.md  configuration.md  conventions.md  design-files.md  getting-started.md  how-it-works.md  ignore-patterns.md  iwh.md  library-structure.md  link-graph.md  playbooks.md  project-setup.md  search.md  stack.md  symbol-graph.md  troubleshooting.md  upgrading.md  validation.md
docs/agent/: README.md  concepts.md  iwh.md  lexi-reference.md  lookup-workflow.md  orientation.md  prohibited-commands.md  quick-reference.md  search.md  stack.md  update-workflow.md
docs/user/: artefact-lifecycle.md  ci-integration.md  concepts-wiki.md  configuration.md  conventions-concepts-exploration.md  design-file-generation.md  getting-started.md  how-it-works.md  ignore-patterns.md  lexictl-reference.md  library-structure.md  link-graph.md  project-setup.md  stack-qa.md  troubleshooting.md  upgrading.md  validation.md
memory/: MEMORY.md
plans/: BACKLOG.md  agent-harnessing-plan.md  agent-start-plan.md  analysis-hooks-skills-commands-rules.md  convention-v2-plan.md  conventions-artifact.md  hook-based-context-injection.md  iwh-issues-2.md  iwh-issues.md  lookup-upgrade.md  mcp-server.md  navigation-by-intent.md  navigation-protocol-review.md  rename-lexibrarian-to-lexibrary.md  search-upgrade.md  start-here-dismantling.md  start-here-reamagined.md  v2-master-plan.md
plans/archive/: agent-start-plan.md  error-logging-plan.md  mcp-vs-plans.md  phase-2-directory-indexes.md  phase-3-ast-parser.md  phase-4-archivist.md  phase-5-concepts-wiki.md  phase-6-the-stack.md  phase-8a-cli-split.md  (+4 more)
tests/: _index_fixtures.py  test_errors.py  test_exceptions.py  test_playbook_cli.py  test_playbook_index.py  test_playbook_model.py  test_playbook_parser.py  test_playbook_search.py  test_playbook_serializer.py  test_playbook_validation.py  test_search.py  test_search_upgrade.py  test_skills_mirror.py
tmp/: repair_design_frontmatter.py
(+1089 files in other folders)
